--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://fontmeme.com/permalink/221016/494a2c6a775cfa50d50bbcb90d98cfaa.png" />
